[metadata]
name = openshift-cluster-management-python-wrapper
version = 1.0.6
author = Ruth Netser
author_email = rnetser@redhat.com
description = Wrapper around https://github.com/RedHatQE/openshift-cluster-management-python-client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedHatQE/openshift-cluster-management-python-wrapper
# download_url = https://github.com/RedHatQE/openshift-cluster-management-python-wrapper/archive/refs/tags/v1.0.6.tar.gz

project_urls =
    Bug Tracker = https://github.com/RedHatQE/openshift-cluster-management-python-wrapper/issues
    Documentation = https://openshift-cluster-management-python-wrapper.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
